--- a/faq.html
+++ b/faq.html
@@ -83,6 +83,27 @@
       </div>
     </section>
 
+     <!--PARA SA COSTUMER SERVICE BOSS-->
+    
+     <button class="chat-toggle" id="chatToggle">💬</button>
+    
+     <div class="chat-container" id="chatContainer">
+         <div class="chat-header">
+             <h3>Costumer Service</h3>
+             <button class="close-btn" id="closeChat">×</button>
+         </div>
+         <div class="chat-messages" id="chatMessages"></div>
+         <div class="chat-suggestions" id="chatSuggestions">
+             <button class="suggestion">bakit ang mahal?</button>
+             <button class="suggestion">nagsasarado kayo?</button>
+             <button class="suggestion">daddy **** moko daddy</button>
+         </div>
+         <div class="chat-input">
+             <input type="text" id="userInput" placeholder="Type your message...">
+             <button id="sendBtn">Send</button>
+         </div>
+     </div>
+
     <section class="newsletter">
       <div class="newsletter-content" data-aos="fade-up">
         <div class="newsletter-text">
@@ -190,6 +211,7 @@
       <button id="submit-order" type="submit">Confirm Order</button>
     </dialog>
 
+    <script src="datasetngmgapogi.js"></script>
     <script type="module" src="function.js" defer></script>
     <!--AOS Anim-->
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
